--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -3,28 +3,29 @@
   color: hsl(0, 100%, 50%);
 }
 
-.small-para {
-  font-size: 12px;
-}
-
 .para {
   font-size: 22px;
 }
 
-.confirm {
-  background: green;
-  color: white;
-  font-size: 20px;
-  font-weight: bold;
-} 
+.small-para {
+  font-size: 12px;
+}
+
 
 .button {
   background-color: #ffc0cb;
   color: black;
   font-size: 20px;
 }
+.confirm {
+  background: green;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+}
 
-.child {
+
+.text.child {
   color: red;
   font-size: 14px;
 }
