--- a/flex/01-flex-center/solution/solution.css
+++ b/flex/01-flex-center/solution/solution.css
@@ -18,12 +18,13 @@
 
 /* disclaimer: duplicating the `.container` selector here isn't best practice.
 In your solution you probably put it right inside the existing `.container`,
-which _is_ the best practice. 
+which _is_ the best practice.
 
-We separated it out here to make it extra clear what has changed. */
+We separated it out here to make it extra clear what has changed.
 
 .container {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+*/
