--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -6,11 +6,23 @@ img {
   width: 100px;
   height: 100px;
 }
-
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 52px;
+}
+.one, .two, .three, .four {
+  max-width: 200px;
+  text-align: center;
+}
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
+
 
 /* do not edit this footer */
 .footer {
